--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/javaCRUDdb?useSSL=false
 
 # Username
-spring.datasource.username=root
+spring.datasource.username={yourUserName}
 
 # Password
-spring.datasource.password=Mysql4me!
+spring.datasource.password={yourPassword}
 
 # Define the database platform
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
